--- a/theme/extras/content.less
+++ b/theme/extras/content.less
@@ -1,22 +1,15 @@
 /* Content */
 .ui.basic.segment.content-area {
   margin: 0em;
-  background: -webkit-linear-gradient(
-    top,
-    #add8e6,
-    lightgrey 10%,
-    #8fbc8f 20%,
-    #a35502 80%,
-    #a35502
-  );
+  background: -webkit-linear-gradient(top, #add8e6, lightgrey 10%, #8fbc8f 20%, #a35502 80%, #a35502);
 }
 
 #page-document {
   padding-right: 1em;
   padding-left: 1em;
   border: 0.5em solid #edf1f2;
-  background: white;
   border-radius: 0.5em;
+  background: white;
 }
 
 .block.slider:not(.inner):not([role='presentation']) {
