--- a/theme/extras/header.less
+++ b/theme/extras/header.less
@@ -10,13 +10,7 @@
 
 .ui.basic.segment.header-wrapper {
   padding-bottom: 2em;
-  background-image: radial-gradient(
-    circle 150px at 25% 15%,
-    white,
-    yellow,
-    lightyellow,
-    #add8e6
-  );
+  background-image: radial-gradient(circle 150px at 25% 15%, white, yellow, lightyellow, #add8e6);
 }
 
 .logo img.ui.image {
