Add sitemap to footerbar

--- a/theme/extras/footer.less
+++ b/theme/extras/footer.less
@@ -81,9 +81,8 @@
   width: 25%;
 }
 
-.youtube,
-.twitter,
-.facebook,
-.accessibility {
+.powered-by-plone,
+.accessibility,
+.sitemap {
   flex-grow: 1;
 }
