--- a/theme/extras/header.less
+++ b/theme/extras/header.less
@@ -9,11 +9,12 @@
 }
 
 .ui.basic.segment.header-wrapper {
-  padding-bottom: 2em;
+  padding-bottom: 3.5em;
   background-image: radial-gradient(circle 150px at 25% 15%, white, yellow, lightyellow, #add8e6);
 }
 
 .logo img.ui.image {
   display: inline-block;
   width: 100px;
+  padding-right: 0.5em;
 }
