--- a/theme/extras/content.less
+++ b/theme/extras/content.less
@@ -1,5 +1,6 @@
 /* Content */
 .ui.basic.segment.content-area {
+  padding-top: 0;
   margin: 0em;
   background: -webkit-linear-gradient(top, #add8e6, lightgrey 10%, #8fbc8f 20%, #a35502 80%, #a35502);
 }
@@ -8,7 +9,7 @@
   padding-right: 1em;
   padding-left: 1em;
   border: 0.5em solid #edf1f2;
-  border-radius: 0.5em;
+  border-radius: 2em;
   background: white;
 }
 
