Add RSS to footerbar

--- a/packages/volto-happy-theme/theme/extras/footer.less
+++ b/packages/volto-happy-theme/theme/extras/footer.less
@@ -82,11 +82,12 @@
 }
 
 .site-email {
-  width: 25%;
+  width: 20%;
 }
 
 .powered-by-plone,
 .accessibility,
+.rss,
 .sitemap {
   flex-grow: 1;
 }
